--- a/css/main.css
+++ b/css/main.css
@@ -127,3 +127,57 @@ body{
   height: 120px;
 } 
 
+/* GAME-CARDS SECTION styles */
+
+.game-cards {
+  display: flex;
+  justify-content: space-between;
+}
+
+.game-cards-section__inner {
+  padding-top: 200px;
+}
+
+.game-cards__h2 {
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 40px;
+  padding-bottom: 60px;
+}
+
+.nash-a {
+  color: rgb(8, 8, 255);
+}
+
+.nash-sh {
+  color: rgb(170, 0, 0);
+}
+
+.game-card {
+  max-width: 380px;
+  cursor: pointer;
+  color: #fff;
+  border: 4px solid #fff;
+}
+
+.game-card__image {
+  max-width: 380px;
+  height: 340px;
+  overflow: hidden;
+  object-fit: cover;
+  object-position: right;
+}
+
+.game-card__name {
+  padding: 10px 14px;
+  font-size: 22px;
+}
+
+.game-card__price {
+  padding: 10px 14px;
+} 
+
+.game-card-price-number {
+  color: rgb(250, 150, 0);
+}
