--- a/css/main.css
+++ b/css/main.css
@@ -181,3 +181,19 @@ body{
 .game-card-price-number {
   color: rgb(250, 150, 0);
 }
+
+.show-more {
+  width: 220px;
+  padding-top: 40px;
+  margin: 0 auto;
+}
+
+.show-more__button {
+  width: 220px;
+  background-color: #000;
+  color: #fff;
+  border: 1px solid rgb(170, 0, 0);
+  text-transform: uppercase;
+  padding: 20px 20px;
+  cursor: pointer;
+}
