--- a/css/main.css
+++ b/css/main.css
@@ -197,3 +197,16 @@ body{
   padding: 20px 20px;
   cursor: pointer;
 }
+
+/* FOOTER styles */
+
+.footer {
+  margin-top: 80px;
+  background-color: #fff;
+  padding: 40px;
+}
+
+.footer-text {
+  font-size: 16px;
+  text-align: center;
+}
