--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body{
 .header {
   /* background-color: rgb(170, 0, 0); */
   background-color: #fff;
-  padding: 24px 0;
+  padding: 24px 20px;
   position: fixed;
   top: 0;
   left: 0;
