--- a/css/main.css
+++ b/css/main.css
@@ -257,3 +257,29 @@ body{
   font-size: 16px;
   text-align: center;
 }
+
+
+/* RESPONSIVE DESIGN STYLES */
+
+.burger {
+  display: none;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.burger__btn {
+  background-color: #000;
+  width: 30px;
+  height: 4px;
+}
+
+@media (max-width: 768px) {
+  .burger {
+    display: flex;
+    cursor: pointer;
+  }
+
+  .menu {
+    display: none;
+  }
+}
