--- a/css/main.css
+++ b/css/main.css
@@ -24,11 +24,11 @@ body{
 .header {
   /* background-color: rgb(170, 0, 0); */
   background-color: #fff;
-  padding: 24px 20px;
+  padding: 1.5rem 1rem;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100%;  
   z-index: 999;
 }
 
@@ -49,7 +49,7 @@ body{
   font-size: 1rem;
   list-style: none;
   display: flex;
-  gap: 0 50px;
+  gap: 0 3rem;
   text-transform: lowercase;
 }
 
@@ -57,7 +57,6 @@ body{
   color: #565656;
   text-decoration: none;
   position: relative;
-  padding: 0 10px;
   transition: .3s;
 }
 
@@ -69,10 +68,10 @@ body{
   content: "";
   position: absolute;
   background-color: #000;
-  height: 3px;
+  height: 0.2em;
   width: 0;
   left: 0;
-  bottom: -10px;
+  bottom: -0.4rem;
   transition: .3s;
 }
 
@@ -82,12 +81,6 @@ body{
 
 .teka {
   color: rgb(170, 0, 0);
-}
-
-.search-games {
-  padding: 10px;
-  outline: none;
-  width: 300px;
 }
 
 /* MAIN, SLIDER STYLES */ 
@@ -135,20 +128,20 @@ body{
   color: #fff;
   text-align: center;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 2.5rem;
   margin-bottom: 120px;
 }
 
 .logos {
+  width: 100%;
   display: flex;
-  gap: 60px;
   overflow: hidden;
 }
 
 .logos__slide {
   display: flex;
   justify-content: center;
-  gap: 60px;
+  gap: 40px;
   align-items: center;
   animation-name: logo-slider;
   animation-duration: 10s;
@@ -172,7 +165,10 @@ body{
 .inkstains,
 .sovietgames,
 .perelesoq {
-  height: 120px;
+  max-height: 8rem;
+  aspect-ratio: 3 / 2;
+  object-fit: contain;
+  mix-blend-mode: color-burn;
 } 
 
 /* GAME-CARDS SECTION styles */
@@ -265,13 +261,13 @@ body{
 .burger {
   display: none;
   flex-direction: column;
-  row-gap: 5px;
+  row-gap: 0.4em;
 }
 
 .burger__btn {
   background-color: #000;
-  width: 30px;
-  height: 4px;
+  width: 2em;
+  height: 0.2em;
 }
 
 @media (max-width: 768px) {
