--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,8 @@ body{
 .game-cards {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .game-cards-section__inner {
@@ -185,7 +187,7 @@ body{
   color: #fff;
   text-align: center;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 3rem;
   padding-bottom: 60px;
 }
 
@@ -198,17 +200,20 @@ body{
 }
 
 .game-card {
-  max-width: 380px;
+  max-width: 100%;
+  margin: 0 auto;
   cursor: pointer;
   color: #fff;
   border: 4px solid #fff;
 }
 
 .game-card__image {
-  max-width: 380px;
-  height: 340px;
+  /* max-width: 380px;
+  height: 340px; */
+  max-width: 100%;
+  object-fit: contain;
   overflow: hidden;
-  object-fit: cover;
+  /* object-fit: cover; */
   object-position: right;
 }
 
