--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,9 @@ body{
   color: #fff;
   text-align: center;
   text-transform: uppercase;
-  font-size: 2.5rem;
+  /* font-size: 2.5rem; */
+  font-size: clamp(14px, 2rem, 2.5rem);
+  text-align: center;
   margin-bottom: 120px;
 }
 
@@ -288,5 +290,21 @@ body{
 
   .menu {
     display: none;
+  }
+}
+
+@media (max-width: 460px) {
+  .ticker-statement {
+    font-size: 24px;
+  }
+
+  .game-cards__h2 {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 340px) {
+  .ticker-statement {
+    font-size: 20px;
   }
 }
